Ensure the 'about page' is designed for web responsiveness on mobile.

--- a/frontend/src/pages/about/about.scss
+++ b/frontend/src/pages/about/about.scss
@@ -3,7 +3,7 @@
     bottom: 0;
     right: 0;
     color: grey;
-    transition: ease-in-out;
+    transition: all 0.3s ease-in-out;
 
     .aboutAnchorArrow {
 	font-size: 3.9em;
@@ -20,6 +20,9 @@
     height: 10vh;
     color: white;
     font-weight: 600;
+    padding: 0 1.3rem;
+    z-index: 1000;
+    transition: background-image 0.3s ease-in-out, color 0.3s ease-in-out;
 
     &.scrolled {
 	background-image: linear-gradient(to top, #0D1C23, #028ECA);
@@ -27,19 +30,15 @@
     }
 
     .iconLeft {
-	position: relative;
-	left: 1.3em;
 	display: flex;
 	align-items: center;
 
 	.arrow {
-	    margin-right: 3px;
+	    margin-right: 0.25rem;
 	}
     }
 
     .socials {
-	position: relative;
-	right: 1.3em;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -47,7 +46,7 @@
 }
 
 .about {
-    padding: 0% 20%;
+    padding: 0% 13%;
     line-height: 1.6;
     background-color: var(--main-color);
     font-family: 'Inter', 'Arial', sans-serif;
@@ -60,15 +59,16 @@
     img {
 	display: block;
 	width: 100%;
+	height: auto;
 	margin-top: 2em;
-	align: center;
 	margin-left: auto;
 	margin-right: auto;
+	object-fit: contain;
     }
 
     h1, h2, h3, h4 {
 	color: rgba(255, 255, 255, 0.9);
-        margin-bottom: 10px;
+        margin-bottom: 0.625rem;
     }
 
     h1 {
